src/test/ui/lifetime-errors/ex3-both-anon-regions-both-are-structs-4.stderr
error[E0623]: lifetime mismatch
  --> $DIR/ex3-both-anon-regions-both-are-structs-4.rs:16:11
   |
15 | fn foo(mut x: Ref) {
   |               ---
   |               |
   |               this type is declared with multiple lifetimes...
16 |     x.a = x.b; //~ ERROR lifetime mismatch
   |           ^^^ ...but data with one lifetime flows into the other here

error: aborting due to previous error

